Fix #6425 - Folders/Labels are not showing on older browsers (mostly on Safari)

--- a/src/sass/components/sidebar/sidebar.scss
+++ b/src/sass/components/sidebar/sidebar.scss
@@ -1,4 +1,7 @@
-#pm_sidebar { float: left }
+#pm_sidebar {
+    float: left;
+    height: 100%;
+}
 #ptSidebar {
     display: flex;
     flex-direction: column;
